fix address posicioning

--- a/src/partials/pages/hotel/doublelux.html
+++ b/src/partials/pages/hotel/doublelux.html
@@ -3,8 +3,8 @@
     <h2>1 room luxe for 2 adult</h2>
 
     <!-- Link to Room Page -->
-    <a class="button button--gray hero__button" href="./room-doublelux.html">Room Page</a>
+    <a class="button button--gray" href="./room-doublelux.html">Room Page</a>
     <!-- Open modal window Room Price -->
-    <button class="button button--gray hero__button" type="button" data-price>Room Prices</button>
+    <button class="button button--gray" type="button" data-price>Room Prices</button>
   </div>
 </section>
