--- a/src/partials/pages/restaurant/hero.html
+++ b/src/partials/pages/restaurant/hero.html
@@ -2,7 +2,7 @@
 <h2 class="hero__subtitel">Restaurant</h2>
 <p class="hero__slogan">Taste of life 24/7</p>
 <div class="hero__wrap">
-  <address class="address">
+  <address class="address hero__address">
     <a class="address__link  address__link--white" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
       rel="noopener noreferrer nofollow">
       <svg class="address__icon address__icon--yellow" width="24" height="24">
