--- a/src/partials/pages/hotel/hero.html
+++ b/src/partials/pages/hotel/hero.html
@@ -1,7 +1,7 @@
 <h1 class="logo hero__logo"><span>MIMINO</span></h1>
 <h2 class="hero__subtitel hero__subtitel--hotel">Hotel</h2>
 <div class="hero__wrap">
-  <address class="address">
+  <address class="address hero__address">
     <a class="address__link address__link--white" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
       rel="noopener noreferrer nofollow">
       <svg class="address__icon address__icon--yellow" width="24" height="24">
