--- a/src/partials/pages/main/details-restaurant.html
+++ b/src/partials/pages/main/details-restaurant.html
@@ -2,8 +2,8 @@
   <div class="container">
     <h2>Restaurant</h2>
     <!-- Open modal window Book Table -->
-    <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+    <button class="button button--gray" type="button" data-table>Book Table</button>
     <!-- Link to Restaurant Page / Menu -->
-    <a class="button button--gray hero__button" href="./restaurant.html">Restaurant menu</a>
+    <a class="button button--gray" href="./restaurant.html">Restaurant menu</a>
   </div>
 </section>
