--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -3,6 +3,6 @@
     <h1>Restaurant Menu</h1>
 
     <!-- Open modal window Book Table -->
-    <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
+    <button class="button button--gray" type="button" data-table>Book Table</button>
   </div>
 </section>
