--- a/src/partials/pages/room-doublelux/amenities.html
+++ b/src/partials/pages/room-doublelux/amenities.html
@@ -2,8 +2,8 @@
   <div class="container">
 
     <!-- Open modal window Book Room -->
-    <button class="button button--gray hero__button" type="button" data-room>Book Room</button>
+    <button class="button button--gray" type="button" data-room>Book Room</button>
     <!-- Link to Hotel Page -->
-    <a class="button button--gray hero__button" href="./hotel.html">Hotel Page</a>
+    <a class="button button--gray" href="./hotel.html">Hotel Page</a>
   </div>
 </section>
