--- a/src/partials/pages/room-triple/hero.html
+++ b/src/partials/pages/room-triple/hero.html
@@ -2,7 +2,7 @@
 <p class="hero__details">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
   consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
 <div class="hero__wrap">
-  <address class="address">
+  <address class="address hero__address">
     <a class="address__link address__link--white" href="https://goo.gl/maps/Pnjo7kjwatkfAMe19" target="_blank"
       rel="noopener noreferrer nofollow">
       <svg class="address__icon address__icon--yellow" width="24" height="24">
