add amenities section, fix gradient, fix background

--- a/src/partials/pages/room-double/amenities.html
+++ b/src/partials/pages/room-double/amenities.html
@@ -1,9 +1,58 @@
-<section>
-  <div class="container">
-
+<section class="amenities">
+  <div class="container amenities__container">
+    <h2 class="amenities__titel">Room Amenities</h2>
+    <p class="amenities__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+      officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+    <ul class="amenities__list">
+      <li class="amenities__item">
+        <h3 class="amenities__subtitel">General</h3>
+        <div class="amenities__wrap">
+          <p class="amenities__subdescription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+            Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p class="amenities__subdescription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+            Velit officia consequat duis enim velit mollit. Exercitation veniam consequat.</p>
+        </div>
+      </li>
+      <li class="amenities__item">
+        <h3 class="amenities__subtitel">Bathroom</h3>
+        <div class="amenities__wrap">
+          <p class="amenities__subdescription"> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p class="amenities__subdescription"> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.</p>
+        </div>
+      </li>
+      <li class="amenities__item">
+        <h3 class="amenities__subtitel">Bedroom</h3>
+        <div class="amenities__wrap">
+          <p class="amenities__subdescription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          </p>
+        </div>
+      </li>
+      <li class="amenities__item">
+        <h3 class="amenities__subtitel">Kitchen</h3>
+        <div class="amenities__wrap">
+          <p class="amenities__subdescription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+          </p>
+          <p class="amenities__subdescription">Amet minim mollit non deserunt ullamco est sit aliqua dolor.
+          </p>
+        </div>
+      </li>
+      <li class="amenities__item">
+        <h3 class="amenities__subtitel">Media</h3>
+        <div class="amenities__wrap">
+          <p class="amenities__subdescription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+            Velit officia consequat duis enim velit mollit.</p>
+        </div>
+      </li>
+    </ul>
     <!-- Open modal window Book Room -->
-    <button class="button button--gray" type="button" data-room>Book Room</button>
+    <button class="button-room button--black amenities__button-room" type="button" data-room>Book Room</button>
     <!-- Link to Hotel Page -->
-    <a class="button button--gray" href="./hotel.html">Hotel Page</a>
+    <a class="amenities__link" href="./hotel.html">Return to Hotel Page
+      <svg class="amenities__icon" width="24" height="24">
+        <use href="/src/images/sprite.svg#arrow-right"></use>
+      </svg>
+    </a>
   </div>
 </section>
