--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,4 @@
 @import './pages/main/module';
 // @import './pages/restaurant/';
 // @import './pages/hotel/module';
-// @import './pages/room-doublelux/module';
-// @import './pages/room-triple/module';
-// @import './pages/room-double/module';
+@import './pages/room/module';
