--- a/src/sass/pages/main/_contacts.scss
+++ b/src/sass/pages/main/_contacts.scss
@@ -1,8 +1,9 @@
 .contacts {
+  background-color: #fffdee;
+
   &__container {
     padding-top: 36px;
     padding-bottom: 32px;
-    background-color: #fffdee;
 
     @media screen and (min-width: 1024px) {
       padding-top: 69px;
@@ -96,10 +97,12 @@
 
   &__map {
     height: 220px;
+    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
 
     @media screen and (min-width: 1024px) {
       width: 535px;
       height: 412px;
+      box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
     }
 
     @media screen and (min-width: 1280px) {
