add Restaurant Menu section, change bottoms stiles

--- a/src/partials/pages/restaurant/hero.html
+++ b/src/partials/pages/restaurant/hero.html
@@ -15,5 +15,5 @@
   <!-- Open modal window Book Table -->
   <button class="button button--gray hero__button" type="button" data-table>Book Table</button>
   <!-- Link to Restaurant Page / Menu -->
-  <a class="button button--gray hero__button" href="./restaurant.html">Restaurant Menu</a>
+  <a class="button button--gray hero__button" href="#menu">Restaurant Menu</a>
 </div>
