--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -1,8 +1,227 @@
-<section>
-  <div class="container">
-    <h1>Restaurant Menu</h1>
+<section class="menu">
+  <div class="container menu__container">
+    <h1 class="menu__titel" id="menu">Restaurant Menu</h1>
+    <div class="menu__wrap">
+      <div>
+        <!-- Hot meals -->
+        <h2 class="visually-hidden">Hot meals</h2>
+        <table class="menu__table">
+          <thead>
+            <tr>
+              <th class="menu__subtitel" colspan="3">Hot meals</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="menu__dish">Veal borscht with beans</td>
+              <td class="menu__weight" rowspan="2">400 g</td>
+              <td class="menu__price" rowspan="2">240 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Veal, potatoes, cabbage, carrots, onions, beans, garlic, tomatoes, greens,
+                sour cream</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Cheese soup with chicken</td>
+              <td class="menu__weight" rowspan="2">400 g</td>
+              <td class="menu__price" rowspan="2">200 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Chicken, potatoes, carrots, onions, mushrooms, soft cheese, greens</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Carbonara pasta</td>
+              <td class="menu__weight" rowspan="2">350 g</td>
+              <td class="menu__price" rowspan="2">430 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Tagliatelle pasta, bacon, cream, Parmesan cheese, egg, greens</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Pork steak</td>
+              <td class="menu__weight" rowspan="2">400 g</td>
+              <td class="menu__price" rowspan="2">500 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Pork tenderloin, spices, served with sweet chili sauce and vegetables</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Gorbusha in white wine sauce</td>
+              <td class="menu__weight" rowspan="2">400 g</td>
+              <td class="menu__price" rowspan="2">400 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Tender redfish, cream sauce based on white wine</td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- Side dishes and snacks -->
+        <h2 class="visually-hidden">Side dishes and snacks</h2>
+        <table class="menu__table">
+          <thead>
+            <tr>
+              <th class="menu__subtitel" colspan="3">Side dishes and snacks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="menu__dish">Baked vegetables</td>
+              <td class="menu__weight" rowspan="2">200 g</td>
+              <td class="menu__price" rowspan="2">230 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Zucchini, pepper, tomato, eggplant</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">French fries</td>
+              <td class="menu__weight" rowspan="2">150 g</td>
+              <td class="menu__price" rowspan="2">160 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Potatoes, tomato sauce</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Peasant-style potatoes</td>
+              <td class="menu__weight" rowspan="2">150 g</td>
+              <td class="menu__price" rowspan="2">160 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Potatoes, spices, spicy sauce</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Crisp pickles from the barrel</td>
+              <td class="menu__weight" rowspan="2">250 g</td>
+              <td class="menu__price" rowspan="2">350 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Salted cucumber, pickled tomato, sauerkraut, Korean carrot</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Chicken wings in honey sauce</td>
+              <td class="menu__weight" rowspan="2">400 g</td>
+              <td class="menu__price" rowspan="2">420 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Chicken wings, mustard-honey sauce, served with carrots, celery and blue
+                cheese sauce</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div>
+        <!-- Salads -->
+        <h2 class="visually-hidden">Salads</h2>
+        <table class="menu__table">
+          <thead>
+            <tr>
+              <th class="menu__subtitel" colspan="3">Salads</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="menu__dish">Caesar with chicken</td>
+              <td class="menu__weight" rowspan="2">230 g</td>
+              <td class="menu__price" rowspan="2">450 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Chicken fillet, lettuce, cherry tomatoes, Parmesan cheese, croutons, Caesar
+                sauce</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Caesar with shrimp</td>
+              <td class="menu__weight" rowspan="2">230 g</td>
+              <td class="menu__price" rowspan="2">300 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Tiger shrimp, lettuce, cherry tomatoes, parmesan cheese, croutons, caesar
+                sauce</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Greek salad</td>
+              <td class="menu__weight" rowspan="2">230 g</td>
+              <td class="menu__price" rowspan="2">280 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Fresh cucumber, tomato, bell pepper, olives, brynza cheese, lettuce, sauce
+              </td>
+            </tr>
 
+            <tr>
+              <td class="menu__dish">Meat salad</td>
+              <td class="menu__weight" rowspan="2">230 g</td>
+              <td class="menu__price" rowspan="2">300 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__foodstuff">Chicken fillet or pork tenderloin, fresh cucumber, tomato, bell pepper, ranch
+                sauce</td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- Desserts -->
+        <h2 class="visually-hidden">Desserts</h2>
+        <table class="menu__table">
+          <thead>
+            <tr>
+              <th class="menu__subtitel" colspan="3">Desserts</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="menu__dish">Napoleon cake</td>
+              <td class="menu__weight">230 g</td>
+              <td class="menu__price">300 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Poppy cake</td>
+              <td class="menu__weight">230 g</td>
+              <td class="menu__price">300 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Tiramisu</td>
+              <td class="menu__weight">120 g</td>
+              <td class="menu__price">260 uah</td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- Drinks -->
+        <h2 class="visually-hidden">Drinks</h2>
+        <table class="menu__table">
+          <thead>
+            <tr>
+              <th class="menu__subtitel" colspan="3">Drinks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="menu__dish">Black/green tea</td>
+              <td class="menu__weight">500 g</td>
+              <td class="menu__price">100 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Espresso</td>
+              <td class="menu__weight">30 g</td>
+              <td class="menu__price">100 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Americano</td>
+              <td class="menu__weight">150 g</td>
+              <td class="menu__price">100 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Cappuccino</td>
+              <td class="menu__weight">200 g</td>
+              <td class="menu__price">160 uah</td>
+            </tr>
+            <tr>
+              <td class="menu__dish">Latte</td>
+              <td class="menu__weight">200 g</td>
+              <td class="menu__price">160 uah</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
     <!-- Open modal window Book Table -->
-    <button class="button button--gray" type="button" data-table>Book Table</button>
+    <button class="button button--black menu__button" type="button" data-table>Book Table</button>
   </div>
 </section>
