--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,6 @@
 @import './layouts/module';
 
 @import './pages/main/module';
-// @import './pages/restaurant/';
-// @import './pages/hotel/module';
+@import './pages/restaurant/module';
+@import './pages/hotel/module';
 @import './pages/room/module';
