--- a/src/sass/components/_bottons.scss
+++ b/src/sass/components/_bottons.scss
@@ -1,9 +1,9 @@
 .button {
-  padding: 0;
-  height: 48px;
+  padding: 12px;
+  // height: 48px;
   width: 100%;
   max-width: 232px;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 
@@ -41,7 +41,8 @@
 }
 
 %btn {
-  height: 64px;
+  padding: 19px;
+  // height: 64px;
   width: 100%;
   display: inline-flex;
   justify-content: center;
@@ -78,7 +79,7 @@
   border-radius: 25px;
 
   @media screen and (min-width: 1024px) {
-    // padding: 18px;
+    padding: 17px;
     max-width: 434px;
     font-size: 24px;
   }
@@ -90,7 +91,8 @@
   border-radius: 2px;
 
   @media screen and (min-width: 1024px) {
-    // padding: 18px;
+    padding: 17px;
     max-width: 592px;
+    font-size: 24px;
   }
 }
